add AI fallback for transaction